--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,8 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+          # Check if the key is correctly written
+          cat ~/.ssh/id_rsa
 
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.0
