--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           port: 22
           script: |
-            cd /var/www/laravel-aws-demo
+            cd /var/www/laravel-app
             git pull origin main
             composer install --no-interaction --prefer-dist
             php artisan migrate --force || true
