--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,12 +29,12 @@ jobs:
           SSH_PORT: ${{ secrets.SSH_PORT }}
           TARGET_DIR: ${{ secrets.TARGET_DIR }}
         run: |
+          ssh -i ~/.ssh/id_ed25519 -p $SSH_PORT $SSH_USER@$SSH_HOST "mkdir -p $TARGET_DIR"
           rsync -avz --delete \
             --exclude='.git' \
             --exclude='.env' \
             --exclude='vendor' \
             --exclude='node_modules' \
-            --exclude='storage' \
             -e "ssh -i ~/.ssh/id_ed25519 -o StrictHostKeyChecking=yes -p $SSH_PORT" \
             ./ $SSH_USER@$SSH_HOST:$TARGET_DIR
 
@@ -52,9 +52,9 @@ jobs:
             # Install PHP dependencies
             composer install --no-dev --prefer-dist --optimize-autoloader --no-interaction
 
-            # Fix storage permissions
-            sudo chown -R www-data:www-data ${TARGET_DIR}
-            sudo chmod -R 775 ${TARGET_DIR}/storage ${TARGET_DIR}/bootstrap/cache || true
+            # Ensure correct permissions
+            sudo chown -R ubuntu:www-data ${TARGET_DIR}
+            sudo chmod -R 775 ${TARGET_DIR}/storage ${TARGET_DIR}/bootstrap/cache
 
             # Run DB migrations
             php artisan migrate --force
@@ -67,7 +67,7 @@ jobs:
             php artisan route:cache
             php artisan view:cache || true
 
-            # Restart services (update php8.x-fpm version if needed)
+            # Restart services
             sudo systemctl restart php8.2-fpm || sudo systemctl restart php-fpm || true
             sudo systemctl reload nginx || true
           EOF
